made notebook more flowing

--- a/session0/complete/session0.ipynb
+++ b/session0/complete/session0.ipynb
@@ -144,9 +144,9 @@
    "source": [
     "### Exercise 1\n",
     "\n",
-    "Make this test pass: `helper.py:HelperTest:test_bytes`\n",
+    "Make [this test](/edit/session0/helper.py) pass: `helper.py:HelperTest:test_bytes`\n",
     "\n",
-    "In order to do this, you'll have to open helper.py and implement the bytes_to_str and str_to_bytes functions. Once you're done editing helper.py, run this again. Try it now!"
+    "In order to do this, you'll have to open helper.py and implement the bytes_to_str and str_to_bytes functions. Once you're done editing [helper.py](/edit/session0/helper.py), run this again. Try it now!"
    ]
   },
   {
@@ -167,6 +167,8 @@
     }
    ],
    "source": [
+    "# Exercise 1\n",
+    "\n",
     "reload(helper)\n",
     "\n",
     "run_test(helper.HelperTest('test_bytes'))"
@@ -302,10 +304,17 @@
     }
    ],
    "source": [
+    "# Exercise 2\n",
+    "\n",
+    "from binascii import hexlify, unhexlify\n",
+    "\n",
     "h = 'b010a49c82b4bc84cc1dfd6e09b2b8114d016041efaf591eca88959e327dd29a'\n",
     "\n",
+    "# convert to binary (unhexlify)\n",
     "b = unhexlify(h)\n",
+    "# reverse ([::-1])\n",
     "b_rev = b[::-1]\n",
+    "# convert to hex (hexlify)",
     "h_rev = hexlify(b_rev)\n",
     "\n",
     "print(helper.bytes_to_str(h_rev))"
