--- a/session0/session0.ipynb
+++ b/session0/session0.ipynb
@@ -118,9 +118,9 @@
    "source": [
     "### Exercise 1\n",
     "\n",
-    "Make this test pass: `helper.py:HelperTest:test_bytes`\n",
+    "Make [this test](/edit/session0/helper.py) pass: `helper.py:HelperTest:test_bytes`\n",
     "\n",
-    "In order to do this, you'll have to open helper.py and implement the bytes_to_str and str_to_bytes functions. Once you're done editing helper.py, run this again. Try it now!"
+    "In order to do this, you'll have to open helper.py and implement the bytes_to_str and str_to_bytes functions. Once you're done editing [helper.py](/edit/session0/helper.py), run this again. Try it now!"
    ]
   },
   {
@@ -129,6 +129,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Exercise 1\n",
+    "\n",
     "reload(helper)\n",
     "\n",
     "run_test(helper.HelperTest('test_bytes'))"
@@ -235,7 +237,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "h = 'b010a49c82b4bc84cc1dfd6e09b2b8114d016041efaf591eca88959e327dd29a'"
+    "# Exercise 2\n",
+    "\n",
+    "from binascii import hexlify, unhexlify\n",
+    "\n",
+    "h = 'b010a49c82b4bc84cc1dfd6e09b2b8114d016041efaf591eca88959e327dd29a'\n",
+    "\n",
+    "# convert to binary (unhexlify)\n",
+    "# reverse ([::-1])\n",
+    "# convert to hex (hexlify)"
    ]
   }
  ],
