--- a/session1/complete/session1.ipynb
+++ b/session1/complete/session1.ipynb
@@ -31,7 +31,7 @@
     "15-30=?\n",
     "```\n",
     "\n",
-    "#### 1.2. Make the following tests pass:\n",
+    "#### 1.2. Make [these tests](/edit/session1/ecc.py) pass:\n",
     "```\n",
     "ecc.py:FieldElementTest:test_add\n",
     "ecc.py:FieldElementTest:test_sub\n",
@@ -74,12 +74,12 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n",
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.029s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -111,7 +111,7 @@
     "\n",
     "#### 2.3. Write a program to calculate `k^30` for all k in F_31. Notice anything?\n",
     "\n",
-    "#### 2.4. Make the following tests pass:\n",
+    "#### 2.4. Make [these tests](/edit/session1/ecc.py) pass:\n",
     "```\n",
     "ecc.py:FieldElementTest:test_mul\n",
     "ecc.py:FieldElementTest:test_pow\n",
@@ -191,12 +191,12 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.013s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n",
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -226,7 +226,7 @@
     "\n",
     "#### 3.2. Write a program to calculate `k/1`, `k/2`, `k/3`, ... `k/30` for some k in F_31. Notice anything about these sets?\n",
     "\n",
-    "#### 3.3. Make the following tests pass:\n",
+    "#### 3.3. Make [these tests](/edit/session1/ecc.py) pass:\n",
     "\n",
     "```\n",
     "ecc.py:FieldElementTest:test_div\n",
@@ -287,7 +287,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.009s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n"
      ]
@@ -297,7 +297,10 @@
     "# Exercise 3.3\n",
     "\n",
     "reload(ecc)\n",
-    "run_test(ecc.FieldElementTest('test_div'))"
+    "run_test(ecc.FieldElementTest('test_div'))\n",
+    "\n",
+    "# Hint: the __pow__ method needs a positive number for the exponent.\n",
+    "# You can mod by p-1"
    ]
   },
   {
@@ -312,7 +315,7 @@
     "(-2,4), (3,7), (18,77)\n",
     "```\n",
     "\n",
-    "#### 4.2. Make this test pass\n",
+    "#### 4.2. Make [this test](/edit/session1/ecc.py) pass\n",
     "```\n",
     "ecc.py:PointTest:test_on_curve\n",
     "```"
@@ -374,7 +377,7 @@
    "source": [
     "### Exercise 5\n",
     "\n",
-    "#### 5.1. Make this test pass\n",
+    "#### 5.1. Make [this test](/edit/session1/ecc.py) pass\n",
     "```\n",
     "ecc.py:PointTest:test_add0\n",
     "```"
@@ -391,7 +394,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -412,7 +415,7 @@
     "\n",
     "#### 6.1. For the curve y^2 = x^3 + 5x + 7, what is (2,5) + (-1,-1)?\n",
     "\n",
-    "#### 6.2. Make this test pass\n",
+    "#### 6.2. Make [this test](/edit/session1/ecc.py) pass\n",
     "```\n",
     "ecc.py:PointTest:test_add1\n",
     "```"
@@ -454,7 +457,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -475,7 +478,7 @@
     "\n",
     "#### 7.1. For the curve y^2 = x^3 + 5x + 7, what is (-1,1) + (-1,1)?\n",
     "\n",
-    "#### 7.2. Make this test pass\n",
+    "#### 7.2. Make [this test](/edit/session1/ecc.py) pass\n",
     "```\n",
     "ecc.py:PointTest:test_add2\n",
     "```"
