--- a/session1/session1.ipynb
+++ b/session1/session1.ipynb
@@ -31,11 +31,26 @@
     "15-30=?\n",
     "```\n",
     "\n",
-    "#### 1.2. Make the following tests pass:\n",
+    "#### 1.2. Make [these tests](/edit/session1/ecc.py) pass:\n",
     "```\n",
     "ecc.py:FieldElementTest:test_add\n",
     "ecc.py:FieldElementTest:test_sub\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 1.1\n",
+    "\n",
+    "# remember that % is the modulo operator\n",
+    "# 2+15=?\n",
+    "# 17+21=?\n",
+    "# 29-4=?\n",
+    "# 15-30=?"
    ]
   },
   {
@@ -69,11 +84,47 @@
     "\n",
     "#### 2.3. Write a program to calculate `k^30` for all k in F_31. Notice anything?\n",
     "\n",
-    "#### 2.4. Make the following tests pass:\n",
+    "#### 2.4. Make [these tests](/edit/session1/ecc.py) pass:\n",
     "```\n",
     "ecc.py:FieldElementTest:test_mul\n",
     "ecc.py:FieldElementTest:test_pow\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 2.1\n",
+    "\n",
+    "# remember that ** is the exponentiation operator\n",
+    "# 24*19=?\n",
+    "# 17^3=?\n",
+    "# 5^5*18=?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 2.2\n",
+    "\n",
+    "# use range(31) to iterate over all numbers from 0 to 30 inclusive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 2.3\n",
+    "\n",
+    "# use range(31) to iterate over all numbers from 0 to 30 inclusive"
    ]
   },
   {
@@ -105,7 +156,7 @@
     "\n",
     "#### 3.2. Write a program to calculate `k/1`, `k/2`, `k/3`, ... `k/30` for some k in F_31. Notice anything about these sets?\n",
     "\n",
-    "#### 3.3. Make the following tests pass:\n",
+    "#### 3.3. Make [these tests](/edit/session1/ecc.py) pass:\n",
     "\n",
     "```\n",
     "ecc.py:FieldElementTest:test_div\n",
@@ -118,10 +169,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Exercise 3.1\n",
+    "\n",
+    "# remember pow(x, p-2, p) is the same as 1/x in F_x\n",
+    "# 3/24 = ?\n",
+    "# 17^(-3) = ?\n",
+    "# 4^(-4)*11 = ?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 3.2\n",
+    "\n",
+    "# use range(31) to iterate over all numbers from 0 to 30 inclusive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Exercise 3.3\n",
     "\n",
     "reload(ecc)\n",
-    "run_test(ecc.FieldElementTest('test_div'))"
+    "run_test(ecc.FieldElementTest('test_div'))\n",
+    "\n",
+    "# Hint: the __pow__ method needs a positive number for the exponent.\n",
+    "# You can mod by p-1"
    ]
   },
   {
@@ -136,10 +215,22 @@
     "(-2,4), (3,7), (18,77)\n",
     "```\n",
     "\n",
-    "#### 4.2. Make this test pass\n",
+    "#### 4.2. Make [this test](/edit/session1/ecc.py) pass\n",
     "```\n",
     "ecc.py:PointTest:test_on_curve\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 4.1\n",
+    "\n",
+    "# (-2,4), (3,7), (18,77)\n",
+    "# equation in python is: y**2 == x**3 + 5*x + 7"
    ]
   },
   {
@@ -160,7 +251,7 @@
    "source": [
     "### Exercise 5\n",
     "\n",
-    "#### 5.1. Make this test pass\n",
+    "#### 5.1. Make [this test](/edit/session1/ecc.py) pass\n",
     "```\n",
     "ecc.py:PointTest:test_add0\n",
     "```"
@@ -186,10 +277,24 @@
     "\n",
     "#### 6.1. For the curve y^2 = x^3 + 5x + 7, what is (2,5) + (-1,-1)?\n",
     "\n",
-    "#### 6.2. Make this test pass\n",
+    "#### 6.2. Make [this test](/edit/session1/ecc.py) pass\n",
     "```\n",
     "ecc.py:PointTest:test_add1\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 6.1\n",
+    "\n",
+    "# formula in python:\n",
+    "# s = (y2-y1)/(x2-x1)\n",
+    "# x3 = s**2 - x2 - x1\n",
+    "# y3 = s*(x1-x3)-y1"
    ]
   },
   {
@@ -212,10 +317,24 @@
     "\n",
     "#### 7.1. For the curve y^2 = x^3 + 5x + 7, what is (-1,1) + (-1,1)?\n",
     "\n",
-    "#### 7.2. Make this test pass\n",
+    "#### 7.2. Make [this test](/edit/session1/ecc.py) pass\n",
     "```\n",
     "ecc.py:PointTest:test_add2\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 7.1\n",
+    "\n",
+    "# formula in python\n",
+    "# s = (3*x1**2+a)/(2*y1)\n",
+    "# x3 = s**2 - 2*x1\n",
+    "# y3 = s*(x1-x3) - y1"
    ]
   },
   {
