--- a/session2/complete/session2.ipynb
+++ b/session2/complete/session2.ipynb
@@ -20,11 +20,11 @@
    "source": [
     "### Exercise 1\n",
     "\n",
-    "#### 1.1. Find out which points are valid on the curve y^2 = x^3 + 7\n",
+    "#### 1.1. Find out which points are valid on the curve y^2 = x^3 + 7 over F_223\n",
     "```\n",
     "(192,105), (17,56), (200,119), (1,193), (42,99)\n",
     "```\n",
-    "#### 1.2. Write this test using the results above\n",
+    "#### 1.2. Write [this test](/edit/session2/ecc.py) using the results above\n",
     "```\n",
     "ecc.py:ECCTest:test_on_curve\n",
     "```"
@@ -50,12 +50,20 @@
    "source": [
     "# Exercise 1.1\n",
     "\n",
-    "points = ((192,105), (17,56), (200,119), (1,193), (42,99))\n",
+    "from ecc import FieldElement, Point\n",
     "\n",
+    "prime = 223\n",
+    "a = FieldElement(0, prime)\n",
+    "b = FieldElement(7, prime)\n",
+    "\n",
+    "points = ((192,105), (17,56), (200,119), (1,193), (42,99))\n",
     "for point in points:\n",
-    "    if point[1]**2 % 223 == (point[0]**3 + 7) % 223:\n",
+    "    try:\n",
+    "        x = FieldElement(point[0], prime)\n",
+    "        y = FieldElement(point[1], prime)\n",
+    "        Point(x, y, a, b)\n",
     "        print('({},{}) is on the curve'.format(point[0], point[1]))\n",
-    "    else:\n",
+    "    except RuntimeError:\n",
     "        print('({},{}) is not on the curve'.format(point[0], point[1]))"
    ]
   },
@@ -89,12 +97,12 @@
    "source": [
     "### Exercise 2\n",
     "\n",
-    "#### 2.1. Find the following point additions on the curve y^2 = x^3 + 7\n",
+    "#### 2.1. Find the following point additions on the curve y^2 = x^3 + 7 over F_223\n",
     "```\n",
     "(192,105) + (17,56), (47,71) + (117,141), (143,98) + (76,66)\n",
     "```\n",
     "\n",
-    "#### 2.2. Write this test using the results above\n",
+    "#### 2.2. Write [this test](/edit/session2/ecc.py) using the results above\n",
     "```\n",
     "ecc.py:ECCTest:test_add1\n",
     "```"
@@ -109,22 +117,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(170, 142)\n",
-      "(60, 139)\n",
-      "(47, 71)\n"
+      "Point(FieldElement_223(170),FieldElement_223(142))\n",
+      "Point(FieldElement_223(60),FieldElement_223(139))\n",
+      "Point(FieldElement_223(47),FieldElement_223(71))\n"
      ]
     }
    ],
    "source": [
     "# Exercise 2.1\n",
     "\n",
+    "from ecc import FieldElement, Point\n",
+    "\n",
+    "prime = 223\n",
+    "a = FieldElement(0, prime)\n",
+    "b = FieldElement(7, prime)\n",
+    "\n",
     "def add_points(i, j):\n",
-    "    x1, y1 = i\n",
-    "    x2, y2 = j\n",
-    "    s=(y2-y1)*pow(x2-x1, 221, 223) % 223\n",
-    "    x3=(s**2-x1-x2) % 223\n",
-    "    y3=(s*(x1-x3)-y1) % 223\n",
-    "    return (x3, y3)\n",
+    "    x1, y1 = FieldElement(i[0], prime), FieldElement(i[1], prime)\n",
+    "    x2, y2 = FieldElement(j[0], prime), FieldElement(j[1], prime)\n",
+    "    s=(y2-y1)/(x2-x1)\n",
+    "    x3=s**2-x1-x2\n",
+    "    y3=s*(x1-x3)-y1\n",
+    "    return Point(x3, y3, a, b)\n",
     "\n",
     "print(add_points((192,105), (17,56)))\n",
     "print(add_points((47,71),(117,141)))\n",
@@ -142,7 +156,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n"
      ]
@@ -161,7 +175,7 @@
    "source": [
     "### Exercise 3\n",
     "\n",
-    "#### 3.1. Find the following scalar multiplications on the curve y^2 = x^3+7\n",
+    "#### 3.1. Find the following scalar multiplications on the curve y^2 = x^3+7 over F_223\n",
     "```\n",
     "2*(192,105), 2*(143,98), 2*(47,71), 4*(47,71), 8*(47,71), 21*(47,71)\n",
     "```\n",
@@ -178,45 +192,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(49, 71)\n",
-      "(64, 168)\n",
-      "(36, 111)\n",
-      "(194, 51)\n",
-      "(116, 55)\n",
-      "(None, None)\n"
+      "Point(FieldElement_223(49),FieldElement_223(71))\n",
+      "Point(FieldElement_223(64),FieldElement_223(168))\n",
+      "Point(FieldElement_223(36),FieldElement_223(111))\n",
+      "Point(FieldElement_223(194),FieldElement_223(51))\n",
+      "Point(FieldElement_223(116),FieldElement_223(55))\n",
+      "Point(infinity)\n"
      ]
     }
    ],
    "source": [
     "# Exercise 3.1\n",
     "\n",
-    "def add_points(i, j):\n",
-    "    x1, y1 = i\n",
-    "    x2, y2 = j\n",
-    "    if i == j:\n",
-    "        s=(3*x1**2)*pow(2*y1, 221, 223) % 223\n",
-    "        x3=(s**2-2*x1) % 223\n",
-    "        y3=(s*(x1-x3)-y1) % 223\n",
-    "    elif x1 == x2:\n",
-    "        return (None, None)\n",
-    "    else:\n",
-    "        s=(y2-y1)*pow(x2-x1, 221, 223) % 223\n",
-    "        x3=(s**2-x1-x2) % 223\n",
-    "        y3=(s*(x1-x3)-y1) % 223\n",
-    "    return (x3, y3)\n",
+    "from ecc import FieldElement, Point\n",
     "\n",
-    "def multiply_points(n, point):\n",
-    "    current = point\n",
-    "    for _ in range(n-1):\n",
-    "        current = add_points(point, current)\n",
+    "prime = 223\n",
+    "a = FieldElement(0, prime)\n",
+    "b = FieldElement(7, prime)\n",
+    "\n",
+    "def scalar_multiply(coords, n):\n",
+    "    point = Point(FieldElement(coords[0],prime), FieldElement(coords[1],prime), a, b)\n",
+    "    current = Point(None, None, a, b)\n",
+    "    for _ in range(n):\n",
+    "        current += point\n",
     "    return current\n",
     "            \n",
-    "print(multiply_points(2, (192,105)))\n",
-    "print(multiply_points(2, (143,98)))\n",
-    "print(multiply_points(2, (47,71)))\n",
-    "print(multiply_points(4, (47,71)))\n",
-    "print(multiply_points(8, (47,71)))\n",
-    "print(multiply_points(21, (47,71)))"
+    "print(scalar_multiply((192,105), 2))\n",
+    "print(scalar_multiply((143,98), 2))\n",
+    "print(scalar_multiply((47,71), 2))\n",
+    "print(scalar_multiply((47,71), 4))\n",
+    "print(scalar_multiply((47,71), 8))\n",
+    "print(scalar_multiply((47,71), 21))"
    ]
   },
   {
@@ -225,15 +231,15 @@
    "source": [
     "### Exercise 4\n",
     "\n",
-    "#### 4.1. Find out what the order of the group generated by (15, 86) is\n",
+    "#### 4.1. Find out what the order of the group generated by (15, 86) is on y^2 = x^3 + 7 over F_223\n",
     "\n",
     "#### Hint: add the point to itself until you get the point at infinity\n",
     "\n",
-    "#### 4.2 Write this test using the results above\n",
+    "#### 4.2 Write [this test](/edit/session2/ecc.py) using the results above\n",
     "```\n",
     "ecc.py:ECCTest:test_rmul\n",
     "```\n",
-    "#### 4.3 Make this test pass\n",
+    "#### 4.3 Make [this test](/edit/session2/ecc.py) pass\n",
     "```\n",
     "ecc.py:ECCTest:test_rmul\n",
     "```"
@@ -255,27 +261,26 @@
    "source": [
     "# Exercise 4.1\n",
     "\n",
-    "def add_points(i, j):\n",
-    "    x1, y1 = i\n",
-    "    x2, y2 = j\n",
-    "    if i == j:\n",
-    "        s=(3*x1**2)*pow(2*y1, 221, 223) % 223\n",
-    "        x3=(s**2-2*x1) % 223\n",
-    "        y3=(s*(x1-x3)-y1) % 223\n",
-    "    elif x1 == x2:\n",
-    "        return (None, None)\n",
-    "    else:\n",
-    "        s=(y2-y1)*pow(x2-x1, 221, 223) % 223\n",
-    "        x3=(s**2-x1-x2) % 223\n",
-    "        y3=(s*(x1-x3)-y1) % 223\n",
-    "    return (x3, y3)\n",
+    "from ecc import FieldElement, Point\n",
     "\n",
-    "e = 1\n",
-    "current = (15, 86)\n",
-    "while current != (None, None):\n",
-    "    current = add_points(current, (15, 86))\n",
-    "    e += 1\n",
-    "print(e)"
+    "prime = 223\n",
+    "a = FieldElement(0, prime)\n",
+    "b = FieldElement(7, prime)\n",
+    "\n",
+    "point = Point(FieldElement(15, prime), FieldElement(86, prime), a, b)\n",
+    "# start product at initial point\n",
+    "current = point\n",
+    "# start counter at 1\n",
+    "i = 1\n",
+    "# loop until you get point at infinity (0)\n",
+    "while current.x is not None:\n",
+    "    # add the point to the product\n",
+    "    current += point\n",
+    "    # add to counter\n",
+    "    i += 1\n",
+    "\n",
+    "# print counter\n",
+    "print(i)"
    ]
   },
   {
@@ -289,7 +294,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.003s\n",
+      "Ran 1 test in 0.004s\n",
       "\n",
       "OK\n"
      ]
@@ -380,7 +385,7 @@
     "7, 1485, 2**128, 2**256+2**31\n",
     "```\n",
     "\n",
-    "#### 5.2. Make this test pass\n",
+    "#### 5.2. Make [this test](/edit/session2/ecc.py) pass\n",
     "```\n",
     "ecc.py:S256Test:test_pubpoint\n",
     "```"
@@ -422,7 +427,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.227s\n",
+      "Ran 1 test in 0.222s\n",
       "\n",
       "OK\n"
      ]
@@ -446,7 +451,7 @@
     "999**3, 123, 42424242\n",
     "```\n",
     "\n",
-    "#### 6.2. Make this test pass\n",
+    "#### 6.2. Make [this test](/edit/session2/ecc.py) pass\n",
     "```\n",
     "ecc.py:S256Test:test_sec\n",
     "```"
@@ -461,27 +466,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "049d5ca49670cbe4c3bfa84c96a8c87df086c6ea6a24ba6b809c9de234496808d56fa15cc7f3d38cda98dee2419f415b7513dde1301f8643cd9245aea7f3f911f9\n",
-      "039d5ca49670cbe4c3bfa84c96a8c87df086c6ea6a24ba6b809c9de234496808d5\n",
-      "04a598a8030da6d86c6bc7f2f5144ea549d28211ea58faa70ebf4c1e665c1fe9b5204b5d6f84822c307e4b4a7140737aec23fc63b65b35f86a10026dbd2d864e6b\n",
-      "03a598a8030da6d86c6bc7f2f5144ea549d28211ea58faa70ebf4c1e665c1fe9b5\n",
-      "04aee2e7d843f7430097859e2bc603abcc3274ff8169c1a469fee0f20614066f8e21ec53f40efac47ac1c5211b2123527e0e9b57ede790c4da1e72c91fb7da54a3\n",
-      "03aee2e7d843f7430097859e2bc603abcc3274ff8169c1a469fee0f20614066f8e\n"
+      "b'049d5ca49670cbe4c3bfa84c96a8c87df086c6ea6a24ba6b809c9de234496808d56fa15cc7f3d38cda98dee2419f415b7513dde1301f8643cd9245aea7f3f911f9'\n",
+      "b'039d5ca49670cbe4c3bfa84c96a8c87df086c6ea6a24ba6b809c9de234496808d5'\n",
+      "b'04a598a8030da6d86c6bc7f2f5144ea549d28211ea58faa70ebf4c1e665c1fe9b5204b5d6f84822c307e4b4a7140737aec23fc63b65b35f86a10026dbd2d864e6b'\n",
+      "b'03a598a8030da6d86c6bc7f2f5144ea549d28211ea58faa70ebf4c1e665c1fe9b5'\n",
+      "b'04aee2e7d843f7430097859e2bc603abcc3274ff8169c1a469fee0f20614066f8e21ec53f40efac47ac1c5211b2123527e0e9b57ede790c4da1e72c91fb7da54a3'\n",
+      "b'03aee2e7d843f7430097859e2bc603abcc3274ff8169c1a469fee0f20614066f8e'\n"
      ]
     }
    ],
    "source": [
     "# Exercise 6.1\n",
     "\n",
+    "from binascii import hexlify\n",
     "from ecc import G\n",
     "\n",
+    "# compressed - b'\\x02'/b'\\x03' follewed by x coord. 02 if y is even, 03 otherwise\n",
+    "# here's how you express a coordinate in bytes: some_integer.to_bytes(32, 'big')\n",
     "for s in (999**3,123,42424242):\n",
+    "    # get public point\n",
     "    point = s*G\n",
-    "    print('04{:x}{:x}'.format(point.x.num, point.y.num))\n",
+    "    # uncompressed - b'\\x04' followed by x coord, then y coord\n",
+    "    print(hexlify(b'\\x04' + point.x.num.to_bytes(32, 'big') + point.y.num.to_bytes(32, 'big')))\n",
     "    if point.y.num % 2 == 1:\n",
-    "        print('03{:x}'.format(point.x.num))\n",
+    "        print(hexlify(b'\\x03' + point.x.num.to_bytes(32, 'big')))\n",
     "    else:\n",
-    "        print('02{:x}'.format(point.x.num))"
+    "        print(hexlify(b'\\x02' + point.x.num.to_bytes(32, 'big')))"
    ]
   },
   {
@@ -495,7 +505,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.198s\n",
+      "Ran 1 test in 0.170s\n",
       "\n",
       "OK\n"
      ]
@@ -521,7 +531,7 @@
     "uncompressed, 4242424242\n",
     "```\n",
     "\n",
-    "#### 7.2. Make this test pass\n",
+    "#### 7.2. Make [this test](/edit/session2/ecc.py) pass\n",
     "```\n",
     "ecc.py:S256Test:test_address\n",
     "```"
@@ -554,15 +564,23 @@
     "from helper import double_sha256, encode_base58, hash160\n",
     "\n",
     "for private_key, compressed in ((8883, True), (321, False), (4242424242, False)):\n",
+    "    # get the public point\n",
     "    point = private_key*G\n",
+    "    # get the sec format\n",
     "    sec = point.sec(compressed=compressed)\n",
+    "    # hash160 the result\n",
     "    h160 = hash160(sec)\n",
+    "    # prepend b'\\00' for mainnet b'\\6f' for testnet\n",
     "    raw = b'\\x00' + h160\n",
-    "    raw = raw + double_sha256(raw)[:4]\n",
-    "    print(encode_base58(raw))\n",
+    "    # get the double_sha256 of the total, first 4 bytes are the checksum\n",
+    "    checksum = double_sha256(raw)[:4]\n",
+    "    # encode_base58 the whole thing\n",
+    "    print(encode_base58(raw+checksum))\n",
+    "    # prepend b'\\00' for mainnet b'\\6f' for testnet\n",
     "    raw = b'\\x6f' + h160\n",
-    "    raw = raw + double_sha256(raw)[:4]\n",
-    "    print(encode_base58(raw))"
+    "    # get the double_sha256 of the total, first 4 bytes are the checksum\n",
+    "    checksum = double_sha256(raw)[:4]\n",
+    "    print(encode_base58(raw+checksum))"
    ]
   },
   {
@@ -576,7 +594,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.179s\n",
+      "Ran 1 test in 0.202s\n",
       "\n",
       "OK\n"
      ]
@@ -601,6 +619,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mzx5YhAH9kNHtcN481u6WkjeHjYtVeKVh2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercise 8.1\n",
+    "\n",
+    "from ecc import G\n",
+    "\n",
+    "secret = 8675309\n",
+    "# get the public point\n",
+    "point = secret*G\n",
+    "# if you completed 7.2, just do the .address() method on the public point\n",
+    "print(point.address(testnet=True))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -619,7 +662,7 @@
     "          c7207fee197d27c618aea621406f6bf5ef6fca38681d82b2f06fddbdce6feab6\n",
     "```\n",
     "\n",
-    "#### 9.2. Make these tests pass\n",
+    "#### 9.2. Make [these tests](/edit/session2/ecc.py) pass\n",
     "```\n",
     "ecc.py:S256Test:test_verify\n",
     "ecc.py:PrivateKeyTest:test_sign\n",
@@ -628,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -645,21 +688,28 @@
     "\n",
     "from ecc import S256Point, N\n",
     "\n",
+    "# initialize the public point\n",
     "point = S256Point(0x887387e452b8eacc4acfde10d9aaf7f6d9a0f975aabb10d006e4da568744d06c, 0x61de6d95231cd89026e286df3b6ae4a894a3378e393e93a0f45b666329a0ae34)\n",
     "z, r, s = 0xec208baa0fc1c19f708a9ca96fdeff3ac3f230bb4a7ba4aede4942ad003c0f60, 0xac8d1c87e51d0d441be8b3dd5b05c8795b48875dffe00b7ffcfac23010d3a395, 0x68342ceff8935ededd102dd876ffd6ba72d6a427a3edb13d26eb0781cb423c4\n",
-    "u = z * pow(s, N-2, N) % N\n",
-    "v = r * pow(s, N-2, N) % N\n",
+    "# calculate 1/s first\n",
+    "s_inv = pow(s, N-2, N)\n",
+    "# u = z * 1/s % N\n",
+    "u = z * s_inv % N\n",
+    "# v = r * 1/s % N\n",
+    "v = r * s_inv % N\n",
+    "# finally, uG+vP should have the x-coordinate equal to r\n",
     "print((u*G + v*point).x.num == r)\n",
     "\n",
     "z, r, s = 0x7c076ff316692a3d7eb3c3bb0f8b1488cf72e1afcd929e29307032997a838a3d, 0xeff69ef2b1bd93a66ed5219add4fb51e11a840f404876325a1e8ffe0529a2c, 0xc7207fee197d27c618aea621406f6bf5ef6fca38681d82b2f06fddbdce6feab6\n",
-    "u = z * pow(s, N-2, N) % N\n",
-    "v = r * pow(s, N-2, N) % N\n",
+    "s_inv = pow(s, N-2, N)\n",
+    "u = z * s_inv % N\n",
+    "v = r * s_inv % N\n",
     "print((u*G + v*point).x.num == r)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -668,12 +718,12 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.337s\n",
+      "Ran 1 test in 0.391s\n",
       "\n",
       "OK\n",
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.335s\n",
+      "Ran 1 test in 0.413s\n",
       "\n",
       "OK\n"
      ]
