--- a/session6/complete/session6.ipynb
+++ b/session6/complete/session6.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "### Exercise 1\n",
     "\n",
-    "#### 1.1. Make this test pass\n",
+    "#### 1.1. Make [this test](/edit/session6/tx.py) pass\n",
     "```\n",
     "tx.py:TxTest:test_is_coinbase\n",
     "```"
@@ -40,7 +40,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.004s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -59,7 +59,7 @@
    "source": [
     "### Exercise 2\n",
     "\n",
-    "#### 2.1. Make this test pass\n",
+    "#### 2.1. Make [this test](/edit/session6/tx.py) pass\n",
     "```\n",
     "tx.py:TxTest:test_coinbase_height\n",
     "```"
@@ -76,7 +76,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -97,10 +97,10 @@
     "\n",
     "#### 3.1. Find the output address corresponding to this ScriptPubKey\n",
     "```\n",
-    "1976a914338c84849423992471bffb1a54a8d9b1d69dc28a88ac\n",
+    "76a914338c84849423992471bffb1a54a8d9b1d69dc28a88ac\n",
     "```\n",
     "\n",
-    "#### 3.2. Make this test pass\n",
+    "#### 3.2. Make [this test](/edit/session6/script.py) pass\n",
     "```\n",
     "script.py:ScriptTest:test_address\n",
     "```"
@@ -126,8 +126,16 @@
     "from helper import h160_to_p2pkh_address\n",
     "from script import Script\n",
     "\n",
-    "script_pubkey = Script.parse(unhexlify('76a914338c84849423992471bffb1a54a8d9b1d69dc28a88ac'))\n",
-    "print(h160_to_p2pkh_address(script_pubkey.elements[2]))"
+    "hex_script_pubkey = '76a914338c84849423992471bffb1a54a8d9b1d69dc28a88ac'\n",
+    "\n",
+    "# unhexlify to get binary\n",
+    "raw_script_pubkey = unhexlify(hex_script_pubkey)\n",
+    "# parse with Script\n",
+    "script_pubkey = Script.parse(raw_script_pubkey)\n",
+    "# get the 3rd element, which should be the hash160\n",
+    "h160 = script_pubkey.elements[2]\n",
+    "# convert h160 to p2pkh address\n",
+    "print(h160_to_p2pkh_address(h160))"
    ]
   },
   {
@@ -141,7 +149,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.003s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n"
      ]
@@ -170,7 +178,7 @@
     "block.py:BlockTest:test_parse\n",
     "block.py:BlockTest:test_serialize\n",
     "block.py:BlockTest:test_hash\n",
-    "```\n"
+    "```"
    ]
   },
   {
@@ -189,11 +197,17 @@
    "source": [
     "# Exercise 4.1\n",
     "\n",
-    "from binascii import hexlify\n",
+    "from binascii import hexlify, unhexlify\n",
     "from helper import double_sha256\n",
     "\n",
-    "s256 = double_sha256(unhexlify('020000208ec39428b17323fa0ddec8e887b4a7c53b8c0a0a220cfd0000000000000000005b0750fce0a889502d40508d39576821155e9c9e3f5c3157f961db38fd8b25be1e77a759e93c0118a4ffd71d'))\n",
-    "print(hexlify(s256))"
+    "hex_block = '020000208ec39428b17323fa0ddec8e887b4a7c53b8c0a0a220cfd0000000000000000005b0750fce0a889502d40508d39576821155e9c9e3f5c3157f961db38fd8b25be1e77a759e93c0118a4ffd71d'\n",
+    "\n",
+    "# unhexlify to get the binary\n",
+    "bin_block = unhexlify(hex_block)\n",
+    "# double_sha256 the result\n",
+    "proof = double_sha256(bin_block)\n",
+    "# hexlify to see what it looks like\n",
+    "print(hexlify(proof))"
    ]
   },
   {
@@ -209,7 +223,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n",
       ".\n",
@@ -219,7 +233,7 @@
       "OK\n",
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.016s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -245,7 +259,7 @@
     "020000208ec39428b17323fa0ddec8e887b4a7c53b8c0a0a220cfd0000000000000000005b0750fce0a889502d40508d39576821155e9c9e3f5c3157f961db38fd8b25be1e77a759e93c0118a4ffd71d\n",
     "```\n",
     "\n",
-    "#### 5.2. Make these tests pass.\n",
+    "#### 5.2. Make [these tests](/edit/session6/block.py) pass.\n",
     "```\n",
     "block.py:BlockTest:test_bip9\n",
     "block.py:BlockTest:test_bip91\n",
@@ -262,9 +276,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "0\n",
-      "1\n"
+      "True\n",
+      "False\n",
+      "True\n"
      ]
     }
    ],
@@ -275,11 +289,22 @@
     "from io import BytesIO\n",
     "from block import Block\n",
     "\n",
-    "stream = BytesIO(unhexlify('020000208ec39428b17323fa0ddec8e887b4a7c53b8c0a0a220cfd0000000000000000005b0750fce0a889502d40508d39576821155e9c9e3f5c3157f961db38fd8b25be1e77a759e93c0118a4ffd71d'))\n",
-    "version = Block.parse(stream).version\n",
-    "print(version >> 29 & 1) # BIP9?\n",
-    "print(version >> 5 & 1) # BIP91?\n",
-    "print(version >> 1 & 1) # BIP141?"
+    "hex_block = '020000208ec39428b17323fa0ddec8e887b4a7c53b8c0a0a220cfd0000000000000000005b0750fce0a889502d40508d39576821155e9c9e3f5c3157f961db38fd8b25be1e77a759e93c0118a4ffd71d'\n",
+    "\n",
+    "# unhexlify to get the binary block\n",
+    "bin_block = unhexlify(hex_block)\n",
+    "# create a stream using BytesIO\n",
+    "stream = BytesIO(bin_block)\n",
+    "# parse the block\n",
+    "b = Block.parse(stream)\n",
+    "# get the version\n",
+    "version = b.version\n",
+    "# rightshift 29 and see if it's equal to 0b001 for BIP9\n",
+    "print(version >> 29 == 0b001)\n",
+    "# see if bit 4 from the right is set for BIP1\n",
+    "print(version >> 4 & 1 == 1)\n",
+    "# see if bit 1 from the right is set for BIP141\n",
+    "print(version >> 1 & 1 == 1)"
    ]
   },
   {
@@ -293,12 +318,12 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n",
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n",
       ".\n",
@@ -379,10 +404,10 @@
     "\n",
     "#### 6.1. Calculate the target and difficulty for these bits:\n",
     "```\n",
-    "0xf2881718\n",
+    "f2881718\n",
     "```\n",
     "\n",
-    "#### 6.2. Make this test pass.\n",
+    "#### 6.2. Make [this test](/edit/session6/block.py) pass.\n",
     "```\n",
     "block.py:BlockTest:test_target\n",
     "```"
@@ -397,7 +422,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0x1788f2000000000000000000000000000000000000000000\n",
+      "000000000000000x1788f2000000000000000000000000000000000000000000\n",
       "46717549644\n"
      ]
     }
@@ -407,17 +432,28 @@
     "\n",
     "from binascii import unhexlify\n",
     "\n",
-    "bits = unhexlify('f2881718')\n",
-    "exponent = bits[-1]\n",
-    "coefficient = int.from_bytes(bits[:-1], 'little')\n",
-    "target = coefficient*2**(8*(exponent-3))\n",
-    "bits_min = unhexlify('ffff001d')\n",
-    "exponent_min = bits_min[-1]\n",
-    "coefficient_min = int.from_bytes(bits_min[:-1], 'little')\n",
-    "min = coefficient_min*2**(8*(exponent_min-3))\n",
+    "hex_bits = 'f2881718'\n",
     "\n",
-    "difficulty = min // target\n",
-    "print(hex(target))\n",
+    "# unhexlify to get the bits\n",
+    "# reverse to get the right order\n",
+    "bin_bits = unhexlify(hex_bits)[::-1]\n",
+    "# first byte is exponent\n",
+    "exponent = bin_bits[0]\n",
+    "# next three bytes are the coefficient. use: int.from_bytes(x, 'big')\n",
+    "coefficient = int.from_bytes(bin_bits[1:], 'big')\n",
+    "# plug into formula coefficient * 2^(8*(exponent-3)) to get the target\n",
+    "target = coefficient * 2**(8*(exponent-3))\n",
+    "\n",
+    "hex_min_bits = 'ffff001d'\n",
+    "\n",
+    "# do the same for the min_bits for min target\n",
+    "min_bits = unhexlify(hex_min_bits)[::-1]\n",
+    "min_exponent = min_bits[0]\n",
+    "min_coefficient = int.from_bytes(min_bits[1:], 'big')\n",
+    "min_target = min_coefficient * 2**(8*(min_exponent-3))\n",
+    "# difficulty is min target / target\n",
+    "difficulty = min_target // target\n",
+    "print('0x{:x}'.format(target).zfill(64))\n",
     "print(difficulty)"
    ]
   },
@@ -432,7 +468,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.003s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -456,7 +492,7 @@
     "04000000fbedbbf0cfdaf278c094f187f2eb987c86a199da22bbb20400000000000000007b7697b29129648fa08b4bcd13c9d5e60abb973a1efac9c8d573c71c807c56c3d6213557faa80518c3737ec1\n",
     "```\n",
     "\n",
-    "#### 7.2. Make this test pass.\n",
+    "#### 7.2. Make [this test](/edit/session6/block.py) pass.\n",
     "```\n",
     "block.py:BlockTest:test_check_pow\n",
     "```"
@@ -468,30 +504,37 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
     }
    ],
    "source": [
     "# Exercise 7.1\n",
     "\n",
     "from binascii import unhexlify\n",
+    "from io import BytesIO\n",
     "from helper import double_sha256\n",
+    "from block import Block\n",
     "\n",
-    "block_raw = unhexlify('04000000fbedbbf0cfdaf278c094f187f2eb987c86a199da22bbb20400000000000000007b7697b29129648fa08b4bcd13c9d5e60abb973a1efac9c8d573c71c807c56c3d6213557faa80518c3737ec1')\n",
-    "s256 = double_sha256(block_raw)\n",
+    "hex_block = '04000000fbedbbf0cfdaf278c094f187f2eb987c86a199da22bbb20400000000000000007b7697b29129648fa08b4bcd13c9d5e60abb973a1efac9c8d573c71c807c56c3d6213557faa80518c3737ec1'\n",
+    "\n",
+    "# unhexlify to get the binary block\n",
+    "bin_block = unhexlify(hex_block)\n",
+    "# double_sha256 the block\n",
+    "s256 = double_sha256(bin_block)\n",
+    "# interpret the result as a number in little endian. use: int.from_bytes(x, 'little')\n",
     "proof_of_work = int.from_bytes(s256, 'little')\n",
-    "bits = block_raw[-8:-4]\n",
-    "exponent = bits[-1]\n",
-    "coefficient = int.from_bytes(bits[:-1], 'little')\n",
-    "target = coefficient*2**(8*(exponent-3))\n",
-    "proof_of_work < target"
+    "# make a stream\n",
+    "stream = BytesIO(bin_block)\n",
+    "# parse the Block\n",
+    "b = Block.parse(stream)\n",
+    "# get the target\n",
+    "target = b.target()\n",
+    "# check proof of work < target\n",
+    "print(proof_of_work < target)"
    ]
   },
   {
