--- a/session6/session6.ipynb
+++ b/session6/session6.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "### Exercise 1\n",
     "\n",
-    "#### 1.1. Make this test pass\n",
+    "#### 1.1. Make [this test](/edit/session6/tx.py) pass\n",
     "```\n",
     "tx.py:TxTest:test_is_coinbase\n",
     "```"
@@ -47,7 +47,7 @@
    "source": [
     "### Exercise 2\n",
     "\n",
-    "#### 2.1. Make this test pass\n",
+    "#### 2.1. Make [this test](/edit/session6/tx.py) pass\n",
     "```\n",
     "tx.py:TxTest:test_coinbase_height\n",
     "```"
@@ -73,13 +73,33 @@
     "\n",
     "#### 3.1. Find the output address corresponding to this ScriptPubKey\n",
     "```\n",
-    "1976a914338c84849423992471bffb1a54a8d9b1d69dc28a88ac\n",
+    "76a914338c84849423992471bffb1a54a8d9b1d69dc28a88ac\n",
     "```\n",
     "\n",
-    "#### 3.2. Make this test pass\n",
+    "#### 3.2. Make [this test](/edit/session6/script.py) pass\n",
     "```\n",
     "script.py:ScriptTest:test_address\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 3.1\n",
+    "\n",
+    "from binascii import unhexlify\n",
+    "from helper import h160_to_p2pkh_address\n",
+    "from script import Script\n",
+    "\n",
+    "hex_script_pubkey = '76a914338c84849423992471bffb1a54a8d9b1d69dc28a88ac'\n",
+    "\n",
+    "# unhexlify to get binary\n",
+    "# parse with Script\n",
+    "# get the 3rd element, which should be the hash160\n",
+    "# convert h160 to p2pkh address"
    ]
   },
   {
@@ -110,13 +130,33 @@
     "block.py:BlockTest:test_parse\n",
     "block.py:BlockTest:test_serialize\n",
     "block.py:BlockTest:test_hash\n",
-    "```\n"
+    "```"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 4.1\n",
+    "\n",
+    "from binascii import hexlify, unhexlify\n",
+    "from helper import double_sha256\n",
+    "\n",
+    "hex_block = '020000208ec39428b17323fa0ddec8e887b4a7c53b8c0a0a220cfd0000000000000000005b0750fce0a889502d40508d39576821155e9c9e3f5c3157f961db38fd8b25be1e77a759e93c0118a4ffd71d'\n",
+    "\n",
+    "# unhexlify to get the binary\n",
+    "# double_sha256 the result\n",
+    "# hexlify to see what it looks like"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# Exercise 4.2\n",
@@ -138,12 +178,35 @@
     "020000208ec39428b17323fa0ddec8e887b4a7c53b8c0a0a220cfd0000000000000000005b0750fce0a889502d40508d39576821155e9c9e3f5c3157f961db38fd8b25be1e77a759e93c0118a4ffd71d\n",
     "```\n",
     "\n",
-    "#### 5.2. Make these tests pass.\n",
+    "#### 5.2. Make [these tests](/edit/session6/block.py) pass.\n",
     "```\n",
     "block.py:BlockTest:test_bip9\n",
     "block.py:BlockTest:test_bip91\n",
     "block.py:BlockTest:test_bip141\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 5.1\n",
+    "\n",
+    "from binascii import unhexlify\n",
+    "from io import BytesIO\n",
+    "from block import Block\n",
+    "\n",
+    "hex_block = '020000208ec39428b17323fa0ddec8e887b4a7c53b8c0a0a220cfd0000000000000000005b0750fce0a889502d40508d39576821155e9c9e3f5c3157f961db38fd8b25be1e77a759e93c0118a4ffd71d'\n",
+    "\n",
+    "# unhexlify to get the binary block\n",
+    "# create a stream using BytesIO\n",
+    "# parse the block\n",
+    "# get the version\n",
+    "# rightshift 29 and see if it's equal to 0b001 for BIP9\n",
+    "# see if bit 4 from the right is set for BIP1\n",
+    "# see if bit 1 from the right is set for BIP141"
    ]
   },
   {
@@ -161,6 +224,43 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from binascii import unhexlify\n",
+    "\n",
+    "bits = unhexlify('e93c0118')\n",
+    "exponent = bits[-1]\n",
+    "coefficient = int.from_bytes(bits[:-1], 'little')\n",
+    "target = coefficient*2**(8*(exponent-3))\n",
+    "print(hex(target))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from binascii import unhexlify\n",
+    "\n",
+    "bits = unhexlify('e93c0118')\n",
+    "exponent = bits[-1]\n",
+    "coefficient = int.from_bytes(bits[:-1], 'little')\n",
+    "target = coefficient*2**(8*(exponent-3))\n",
+    "\n",
+    "bits_min = unhexlify('ffff001d')\n",
+    "exponent_min = bits_min[-1]\n",
+    "coefficient_min = int.from_bytes(bits_min[:-1], 'little')\n",
+    "min = coefficient_min*2**(8*(exponent_min-3))\n",
+    "\n",
+    "difficulty = min // target\n",
+    "print(difficulty)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -168,13 +268,37 @@
     "\n",
     "#### 6.1. Calculate the target and difficulty for these bits:\n",
     "```\n",
-    "0xf2881718\n",
+    "f2881718\n",
     "```\n",
     "\n",
-    "#### 6.2. Make this test pass.\n",
+    "#### 6.2. Make [this test](/edit/session6/block.py) pass.\n",
     "```\n",
     "block.py:BlockTest:test_target\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 6.1\n",
+    "\n",
+    "from binascii import unhexlify\n",
+    "\n",
+    "hex_bits = 'f2881718'\n",
+    "\n",
+    "# unhexlify to get the bits\n",
+    "# reverse to get the right order\n",
+    "# first byte is exponent\n",
+    "# next three bytes are the coefficient. use: int.from_bytes(x, 'big')\n",
+    "# plug into formula coefficient * 2^(8*(exponent-3)) to get the target\n",
+    "\n",
+    "hex_min_bits = 'ffff001d'\n",
+    "\n",
+    "# do the same for the min_bits for min target\n",
+    "# difficulty is min target / target"
    ]
   },
   {
@@ -200,10 +324,34 @@
     "04000000fbedbbf0cfdaf278c094f187f2eb987c86a199da22bbb20400000000000000007b7697b29129648fa08b4bcd13c9d5e60abb973a1efac9c8d573c71c807c56c3d6213557faa80518c3737ec1\n",
     "```\n",
     "\n",
-    "#### 7.2. Make this test pass.\n",
+    "#### 7.2. Make [this test](/edit/session6/block.py) pass.\n",
     "```\n",
     "block.py:BlockTest:test_check_pow\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 7.1\n",
+    "\n",
+    "from binascii import unhexlify\n",
+    "from io import BytesIO\n",
+    "from helper import double_sha256\n",
+    "from block import Block\n",
+    "\n",
+    "hex_block = '04000000fbedbbf0cfdaf278c094f187f2eb987c86a199da22bbb20400000000000000007b7697b29129648fa08b4bcd13c9d5e60abb973a1efac9c8d573c71c807c56c3d6213557faa80518c3737ec1'\n",
+    "\n",
+    "# unhexlify to get the binary block\n",
+    "# double_sha256 the block\n",
+    "# interpret the result as a number in little endian. use: int.from_bytes(x, 'little')\n",
+    "# make a stream\n",
+    "# parse the Block\n",
+    "# get the target\n",
+    "# check proof of work < target"
    ]
   },
   {
